# llm-swarm

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Docker.md  PackagesToInstall.txt  README.md  Untitled.ipynb  agents.py  crewai_agents.py  docker-compose.yml  eslint.config.js  main.py  package.json  pyproject.toml  python-package-docker.md  tasks.py  test.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
.ipynb_checkpoints/: Untitled-2-checkpoint.ipynb  Untitled-checkpoint.ipynb
FunctionTestV1/: agents.py  main.py  tasks.py
GameCrew/: agents.py  main.py  tasks.py
documentation/: AgentStructure.txt
llm_testing/: LLM_Test.ipynb  README.md  llm_swarm (1).ipynb
llm_testing/test_inputs/: test_functions_finished.py  test_functions_raw.py
llm_testing/test_outputs/: functions_output_24-05-21_12-07-10.py  functions_output_24-05-21_12-52-03.py
llm_testing/test_suite/: test_functions_raw.py  test_functions_unit_tests.py  test_functions_updated_variable_names.py
python-package/: Dockerfile
research/: llm_swarm.ipynb
rhys_jupyter_notebook/: COMP_4800_Research.ipynb  README.md  Untitled.ipynb  pyproject.toml
rhys_jupyter_notebook/.ipynb_checkpoints/: COMP_4800_Research-checkpoint.ipynb  Untitled-checkpoint.ipynb
rhys_jupyter_notebook/Ollama_Models/: NEW  custom_ollama3_test1  custom_ollama3_test2  custom_ollama3_test3
rhys_jupyter_notebook/test_outputs/: function_output_24-05-15_15-36-43.txt  function_output_24-05-15_15:47:34.txt  function_output_24-05-15_16:00:47.txt  function_output_24-05-15_16:05:04.txt  function_output_24-05-15_16:14:22.txt  function_output_24-05-16_15:07:02.txt  function_output_24-05-16_15:51:59.txt
rhys_jupyter_notebook/test_suite/: test_functions_raw.py
rhys_research/: LLM_Test.ipynb  README.md  Untitled.ipynb
rhys_research/.ipynb_checkpoints/: LLM_Test-checkpoint.ipynb  Untitled-checkpoint.ipynb
rhys_research/custom_llama_models/: custom_model_test
rhys_research/test_outputs/: function_output_24-05-20_10-53-42.txt  (+1 more)
src/: crew.py  main.py
test_input/: factorial_recursive.py  rnadomstuff.py  snake_game_v1.py  snake_game_v3.py
test_output/: factorial_recursive.py  flatten_list.py
utils/: code_cleaner.py
vscode-extension/: .prettierrc.js  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  noxfile.py  package-lock.json  package.json  requirements.in  requirements.txt  vscode-extension
vscode-extension/src/: extension.ts
(+46 files in other folders)
