[tool.poetry]
name = "llm-swarm"
version = "0.1.0"
description = ""
authors = ["Terence Grigoruk <terence.grigoruk@gmail.com>"]
readme = "README.md"
packages = [
    { from = "python-package/src", include = "package" }
]

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
python-dotenv = "^1.0.0"
crewai = ">=0.28.8,<0.31.0"
langchain-anthropic = "^0.1.11"
langchain-groq = "^0.1.3"
ollama = "^0.2.0"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.4.3"

[tool.poetry.scripts]
cli = "package.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
