[tool.poetry]
name = "comp-4800-testing"
version = "0.1.0"
description = ""
authors = ["Rhys Mahannah <rhys.mahannah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
crewai = "^0.30.5"
langchain = "^0.1.20"
ollama = "^0.2.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
llama-cpp-python = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
